Update branding for stremio-jackett to fix actual URL in backend!
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio-jackett/branding/index.hbs
+++ b/apps/stremio-jackett/branding/index.hbs
@@ -183,7 +183,7 @@
 										<label class="form-label">ElfHosted Jackett URL (preconfigured)</label>
 										<input
 											required
-											value="http://jacket:9117"
+											value="http://jackett:9117"
 											disabled="disabled"
 											class="form-control form-control-lg"
 											placeholder="For example 'http(s)://jackett_url:port'"
