--- a/apps/annatar/branding/configure.html.j2
+++ b/apps/annatar/branding/configure.html.j2
@@ -41,7 +41,7 @@
 		<A HREF="https://gitlab.com/stremio-add-ons/annatar">Annatar</A> is a self-hosted, fast, just-in-time torrent/debrid search add-on for Stremio providing results in under 3s. Got issues or feature requests? Create issues <A HREF="https://gitlab.com/stremio-add-ons/annatar/-/issues">here</A>.
 	</div>	
 	<div class="form-floating mb-3">
-		<A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily, from $0.05/day, with $10 free credit on new accounts.
+		<A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Individual, hosted <A HREF="https://store.elfhosted.com/product/annatar-jackett-bundle">Annatar+Jackett instances are available</A> (<I>say, if you need extra indexers</I>) from $0.15/day, with <A HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
 	</div>	
 
 	<form id="theform">
