--- a/apps/annatar/branding/configure.html.j2
+++ b/apps/annatar/branding/configure.html.j2
@@ -36,7 +36,7 @@
 		
 	</div>	
 	<div class="form-floating mb-3">
-		This is a free, public <A HREF="https://elfhosted.com">ElfHosted</A> instance of <A HREF="https://gitlab.com/stremio-add-ons/annatar">Annatar</A>, for the <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> community. See the <A HREF="https://grafana.elfhosted.com/public-dashboards/c78ab8d31f084ef4bccb7017b4518588?orgId=1">geeky "GrafAnnatar" metrics here</A> / <A HREF="https://status.elfhosted.com/history/public-annatar-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-annatar-stremio-addon%2Fuptime.json"</A>
+		This is a free, public <A HREF="https://elfhosted.com">ElfHosted</A> instance of <A HREF="https://gitlab.com/stremio-add-ons/annatar">Annatar</A>, for the <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> community. See the <A HREF="https://grafana.elfhosted.com/public-dashboards/c78ab8d31f084ef4bccb7017b4518588?orgId=1">geeky "GrafAnnatar" metrics here</A> / <A HREF="https://status.elfhosted.com/history/public-annatar-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-annatar-stremio-addon%2Fuptime.json"></A>
 	</div>
 	<div class="form-floating mb-3">
 		<A HREF="https://gitlab.com/stremio-add-ons/annatar">Annatar</A> is a self-hosted, fast, just-in-time torrent/debrid search add-on for Stremio providing results in under 3s. Got issues or feature requests? Support your developer on <A HREF="https://ko-fi.com/annatar">Ko-fi</A> ❤️, and create issues <A HREF="https://gitlab.com/stremio-add-ons/annatar/-/issues">here</A>.
