--- a/apps/annatar/branding/branding.html.j2
+++ b/apps/annatar/branding/branding.html.j2
@@ -92,3 +92,27 @@
 </body>
 
 </html>
+
+
+<div class="banner mb-3 p-3 text-center">
+    <h1>Annatar - Lord of Gifts | ElfHosted</h1>
+    <p>{{ ctx.version }}</p>
+    <p>
+        Watch movies and tv shows from torrent indexers that are cached
+        on Debrid services. This is a free community <A HREF="https://elfhosted.com">ElfHosted</A> edition. Enjoy!
+    </p>
+		<p>
+			Support your developer on <A HREF="https://ko-fi.com/annatar">Ko-fi</A> ❤️, and create issues <A HREF="https://gitlab.com/stremio-add-ons/annatar/-/issues">here</A>
+		</p>
+	<P>
+		<A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Individual, hosted <A HREF="https://store.elfhosted.com/product/annatar-jackett-bundle">Annatar+Jackett instances are available</A> (<I>say, if you need extra indexers</I>) from $0.15/day, with <A HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
+	</P>
+           <h3>Why use ElfHosted addons?</h3>
+             <div>
+                <ul>
+                   <li>Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/public-annatar-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-annatar-stremio-addon%2Fuptime.json"></A></li>
+                   <li>Active contributors to <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> subreddit and <A HREF="https://discord.gg/zNRf6YF">Discord</A></li>
+                   <li>Geek out over <A HREF="https://fnky.nz/grafana-annatar">public performance metrics</A></li>
+                </ul>
+             </div>		
+</div>
