--- a/apps/annatar/branding/branding.html.j2
+++ b/apps/annatar/branding/branding.html.j2
@@ -13,7 +13,7 @@
 	</P>
            <h3>Why use <A HREF="https://elfhosted.com/stremio-addons/">ElfHosted Stremio addons</A>?</h3>
              <p>
-                   ✅ Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/public-annatar-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%2Fpublic-annatar-stremio-addon%2Fuptime.json"></A><br/>
+                   ✅ Highly-available, <A HREF="https://elfhosted.com/open/">open-source</A> infrastructure  / <A HREF="https://status.elfhosted.com/history/annatar-stremio-addon"><IMG SRC="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2Fgeek-cookbook%2Felfhosted-upptime%2Fmaster%2Fapi%annatar-stremio-addon%2Fuptime.json"></A><br/>
                    ✅ Active contributors to <A HREF="https://www.reddit.com/r/StremioAddons/">r/StremioAddons</A> subreddit and <A HREF="https://discord.gg/zNRf6YF">Discord</A><br/>
                    ✅ Geek out over <A HREF="https://fnky.nz/grafana-annatar">public performance metrics</A><br/>
              </p>		
