Update annatar branding for annatar
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/annatar/branding/branding.html.j2
+++ b/apps/annatar/branding/branding.html.j2
@@ -6,7 +6,7 @@
         on Debrid services. This is a free community <A HREF="https://elfhosted.com">ElfHosted</A> edition. Enjoy! (<I>reasonable <A HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>)
     </p>
 		<p>
-			Support your developer on <A HREF="https://ko-fi.com/annatar">Ko-fi</A> ❤️, and create issues <A HREF="https://gitlab.com/stremio-add-ons/annatar/-/issues">here</A>
+			Create upstream issues <A HREF="https://github.com/g0ldyy/annatar/issues">here</A>
 		</p>
 	<P>
 		<A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Individual, hosted <A HREF="https://store.elfhosted.com/product/annatar-jackett-bundle">Annatar+Jackett instances are available</A> (<I>say, if you need extra indexers</I>) from $0.15/day, with <A HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
