--- a/apps/annatar/branding/branding.html.j2
+++ b/apps/annatar/branding/branding.html.j2
@@ -9,7 +9,7 @@
 			Create upstream issues <A HREF="https://github.com/g0ldyy/annatar/issues">here</A>
 		</p>
 	<P>
-		<A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Individual, hosted <A HREF="https://store.elfhosted.com/product/annatar-jackett-bundle">Annatar+Jackett instances are available</A> (<I>say, if you need extra indexers</I>) from $0.15/day, with <A HREF="https://elfhosted.com/how-to/spend-elfbuckz/">$10 free credit</A> for <A HREF="https://store.elfhosted.com/my-account/">new accounts</A>.
+		<A HREF="https://elfhosted.com">ElfHosted</A> is an <A HREF="https://elfhosted.com/open/">open-source</A> PaaS built and run by <A HREF="https://geek-cookbook.funkypenguin.co.nz">geeks</A>, which self-hosts <A HREF="https://elfhosted.com/guides/media/">your favorite streaming apps</A> for you automatically and easily. Individual, hosted <A HREF="https://store.elfhosted.com/product/annatar-jackett-bundle">Annatar+Jackett instances are available</A> (<I>say, if you need extra indexers</I>).
 	</P>
            <h3>Why use <A HREF="https://elfhosted.com/stremio-addons/">ElfHosted Stremio addons</A>?</h3>
              <p>
