more annatar tidying
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/annatar/branding/branding.html.j2
+++ b/apps/annatar/branding/branding.html.j2
@@ -1,9 +1,9 @@
 <div class="banner mb-3 p-3 text-center">
-    <h1>Annatar - Lord of Gifts | ElfHosted</h1>
+    <h1>Annatar | ElfHosted</h1>
     <p>{{ ctx.version }}</p>
     <p>
         Watch movies and tv shows from torrent indexers that are cached
-        on Debrid services. This is a free community <A HREF="https://elfhosted.com">ElfHosted</A> edition. Enjoy! (<I>reasonable <A HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>)
+        on Debrid services. This is a free community <A HREF="https://elfhosted.com">ElfHosted</A> edition. Enjoy! ❤️ (<I>reasonable <A HREF="https://github.com/funkypenguin/elf-infra/blob/main/traefik-middleware/middleware-rate-limit-public-stremio-addon.yaml">rate-limits</A> apply</I>)
     </p>
 		<p>
 			Create upstream issues <A HREF="https://github.com/g0ldyy/annatar/issues">here</A>
@@ -11,8 +11,6 @@
              <h3>What is ElfHosted?</h3>
              <div>
 			 <p><a href="https://elfhosted.com/">ElfHosted</a> is an <a href="https://elfhosted.com/open/">open-source</a> platform for <A HREF="https://elfhosted.com/guides/media/">"self-hosting" Plex with Real Debrid</A> (<I>using <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex/">plex_debrid</A>, <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-riven/">Riven</A>, or <A HREF="https://elfhosted.com/guides/media/stream-from-real-debrid-with-plex-radarr-sonarr-prowlarr/">Radarr & Sonarr</A></I>), and your <a href="https://elfhosted.com/apps/">awesome self-hosted apps</a>, automatically and easily.</p>
-
-			<br/>
 			 <p>We support the Stremio community (<A HREf="https://reddit.com/r/StremioAddons">Reddit</A> / <A HREF="https://discord.gg/zNRf6YF">Discord</A>) by providing free hosting for some of the <A HREF="https://elfhosted.com/stremio-addons/">best Stremio Addons</A>, including those which enable you to:</p>
              </div>	
 
