--- a/apps/readarr/config.xml.tmpl
+++ b/apps/readarr/config.xml.tmpl
@@ -4,7 +4,7 @@
   <Branch>${READARR__BRANCH}</Branch>
   <ApiKey>${READARR__API_KEY}</ApiKey>
   <AuthenticationMethod>${READARR__AUTHENTICATION_METHOD:-None}</AuthenticationMethod>
-  <AuthenticationRequired>${READARR__AUTHENTICATION_REQUIRED}</AuthenticationRequired>
+  <AuthenticationRequired>${READARR__AUTHENTICATION_REQUIRED:-DisabledForLocalAddresses}</AuthenticationRequired>
   <InstanceName>${READARR__INSTANCE_NAME}</InstanceName>
   <PostgresUser>${READARR__POSTGRES_USER}</PostgresUser>
   <PostgresPassword>${READARR__POSTGRES_PASSWORD}</PostgresPassword>
